<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/onyx">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:id="@+id/menu_app_name"
        android:background="@color/gray">

        <Button
            android:id="@+id/FakesmenuButton"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_menu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/FakesmenuButton"
            android:id="@+id/RCheader"
            android:clickable="true"
            android:autoSizeTextType="uniform"
            android:fontFamily="sans-serif-smallcaps"
            android:textAllCaps="true"
            android:textScaleX="2"
            android:gravity="center"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/PreferencesButton"
            android:layout_width="47dp"
            android:layout_height="match_parent"
            android:alpha="0"
            android:text="Button" />
    </RelativeLayout>

    <TextView
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_below="@id/menu_app_name"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/destination_title"
        android:background="@drawable/gray_bordered_rectangle"
        android:text="@string/destination_title"
        android:textSize="30sp"
        android:gravity="center"/>

    <RelativeLayout
        android:id="@+id/start_destination"
        android:layout_width="303dp"
        android:layout_height="26dp"
        android:layout_below="@id/destination_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:background="@color/gray">

        <TextView
            android:id="@+id/start_text"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:background="@drawable/black_rectangle_border"
            android:gravity="center"
            android:text="@string/start"
            android:textSize="30sp" />

        <AutoCompleteTextView
            android:id="@+id/start_dest_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/start_text"
            android:background="@drawable/white_bordered_rectangle"
            android:hint="Where from?"
            android:imeOptions="actionSearch"
            android:textColor="#000"
            android:textSize="15sp" />/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/end_destination"
        android:layout_width="302dp"
        android:layout_height="27dp"
        android:layout_below="@id/start_destination"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:background="@color/gray">

        <TextView
            android:id="@+id/end_text"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:background="@drawable/black_rectangle_border"
            android:gravity="center"
            android:text="@string/end"
            android:textSize="30sp" />

        <AutoCompleteTextView
            android:id="@+id/end_dest_input"
            android:layout_width="234dp"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/end_text"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@+id/end_text"
            android:background="@drawable/white_bordered_rectangle"
            android:hint="Where to?"
            android:imeOptions="actionSearch"
            android:textColor="#000"
            android:textSize="15sp" />/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/next_bike"
        android:layout_width="308dp"
        android:layout_height="114dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="137dp"
        android:background="@drawable/gray_bordered_rectangle"
        android:clickable="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/next"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/next"
            android:textSize="30sp" />

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/next"
            android:background="@drawable/bicycle" />

        <Button
            android:id="@+id/RCNextButton"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:alpha="0"
            android:text="Button" />
    </RelativeLayout>

</RelativeLayout>